--- a/e_com/src/index.css
+++ b/e_com/src/index.css
@@ -7,6 +7,7 @@ body {
   font-family: "Inter";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f9fafb;
 }
 
 @font-face {
